--- a/assets/styles/button.scss
+++ b/assets/styles/button.scss
@@ -1,7 +1,8 @@
 .button {
   font-size: 15px;
   line-height: 24px;
-  padding: 5px 36px;
+  padding: 7px 22px;
+  letter-spacing: 0.6px
   &_primary {
     background-color: var(--blue);
     color: var(--white);
