add advantages section

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -7,6 +7,10 @@
   --black: #1F1F1F;
   --white: #FFFFFF;
   --blue: #0070A0;
+  --yellow: #FAEA73;
+  --light-blue: #CCEFF6;
+  --rose: #F7CEDC;
+
 
 
 
