--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -3,17 +3,15 @@
 @import url('../fonts/fonts.css');
 
 :root {
-  --grey: #33383F;
   --black: #1F1F1F;
   --white: #FFFFFF;
   --blue: #0070A0;
-  --yellow: #FAEA73;
   --light-blue: #CCEFF6;
+  --yellow: #FAEA73;
   --rose: #F7CEDC;
-
-
-
-
+  --grey: #33383F;
+  --middle-grey: #CECAC4;
+  --light-grey: #F7F9FA;
 }
 
 body * {
