--- a/assets/styles/info.scss
+++ b/assets/styles/info.scss
@@ -11,7 +11,7 @@
       'buttons img';
   }
   &__header {
-    font-family: Fraunces;
+    font-family: Fraunces, serif;
     font-size: 58px;
     line-height: 63.8px;
     font-weight: 400;
