--- a/assets/fonts/fonts.css
+++ b/assets/fonts/fonts.css
@@ -1,28 +1,28 @@
 @font-face {
   font-family: Inter;
   font-style: normal;
-  font-weight: regular;
+  font-weight: 400;
   src: local('Inter'), url('./Inter/Inter_28pt-Regular.ttf');
 }
 
 @font-face {
   font-family: Inter;
   font-style: normal;
-  font-weight: light;
+  font-weight: 300;
   src: local('Inter'), url('./Inter/Inter_28pt-Light.ttf');
 }
 
 @font-face {
   font-family: Inter;
   font-style: normal;
-  font-weight: medium;
+  font-weight: 500;
   src: local('Inter'), url('./Inter/Inter_28pt-Medium.ttf');
 }
 
 @font-face {
   font-family: Inter;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 600;
   src: local('Inter'), url('./Inter/Inter_28pt-SemiBold.ttf');
 }
 
