add checklist block

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,6 +9,7 @@
   --light-blue: #CCEFF6;
   --yellow: #FAEA73;
   --rose: #F7CEDC;
+  --light-rose: #FFCCDD;
   --grey: #33383F;
   --middle-grey: #CECAC4;
   --light-grey: #F7F9FA;
