--- a/assets/styles/blog.scss
+++ b/assets/styles/blog.scss
@@ -1,5 +1,5 @@
 .blog {
-  background-color: var(--light-grey);
+  background-color: var(--grey-4);
   &__inner {
     padding-top: 79px;
     padding-bottom: 85px;
