--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -18,7 +18,7 @@
       letter-spacing: 0.4px;
     }
     a {
-      color: var(--grey);
+      color: var(--grey-1);
       font-size: 15px;
     }
   }
