--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -10,9 +10,10 @@
   --yellow: #FAEA73;
   --rose: #F7CEDC;
   --light-rose: #FFCCDD;
-  --grey: #33383F;
-  --middle-grey: #CECAC4;
-  --light-grey: #F7F9FA;
+  --grey-1: #33383F;
+  --grey-2: #626A72;
+  --grey-3: #CECAC4;
+  --grey-4: #F7F9FA;
 }
 
 body * {
