--- a/assets/styles/get-started.scss
+++ b/assets/styles/get-started.scss
@@ -35,7 +35,7 @@
     line-height: 21px;
     letter-spacing: 0.2px;
     text-align: left;
-    color: #626a72;
+    color: var(--grey-2);
     display: flex;
     padding-top: 19px;
     gap: 41px;
